# MGWSO

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: ProjectOptions.cmake
doc/: requirements.txt
doc/source/: Configuration.rst  Example.rst  Model settings.rst  Output.rst  Usage.rst  conf.py  index.rst
include/: config.h  csv_file.h  date_time.h  open_da_property.h  utility.h  wanda.h
libs/: CMakeLists.txt
libs/wanda_api/: CMakeLists.txt
libs/wanda_api/include/: btps.h  c_wanda_engine.h  c_wanda_model.h  calc_hcs.h  deltares_helper_functions.h  diagram_text_box.h  globvar.h  mode_and_options.h  nefis.h  nefis_exception.h  nefis_file.h  wanda_diagram_lines.h  wanda_engine.h  wanda_item.h  wanda_table.h  wandacomponent.h  wandamodel.h  wandanode.h  wandaproperty.h  wandasigline.h
libs/wanda_api/lib/Dauth/Debug/: dauth.lib  dcrypt.lib
libs/wanda_api/lib/Dauth/Release/: dac2.lib  dauth.lib
libs/wanda_api/lib/Dauth/include/: lcencdec.h
libs/wanda_api/lib/nefis/: nefis_dll.lib
libs/wanda_api/src/: Wanda_engine.cpp  Wandacomponent.cpp  Wandadef.cpp  Wandamodel.cpp  Wandanode.cpp  Wandaproperty.cpp  Wandasigline.cpp  c_wanda_engine.cpp  c_wanda_model.cpp  calc_hcs.cpp  deltares_helper_functions.cpp  nefis_file.cpp  wanda_item.cpp  wanda_table.cpp
src/: CMakeLists.txt  config.cpp  csv_file.cpp  date_time.cpp  main.cpp  open_da_property.cpp  wanda.cpp
